image stretching fixed on our company page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -491,6 +491,10 @@ a{
     .btn_contact {
         margin-left: 2rem;
     }
+
+    .our_company_img {
+        height: auto;
+    }
 }
 
 @media (max-width: 800px) {
